fix: patternfly styling for dark mode
* chartElement, add axes names for style access
* graphCardChartLegend, clean classNames
* pageHeader, add page dark mode theme switcher for dev mode
* pageThemeSwitcher, toggle switch for dark mode
* styling, move graph axes to compatible color, minor table padding

--- a/src/styles/_graph.scss
+++ b/src/styles/_graph.scss
@@ -41,10 +41,13 @@
 
   &__legend-item-wrapper {
     > :first-child {
-      padding-left: 0;
-
       &[class*='disabled'] {
         background-color: transparent !important;
+        color: inherit;
+
+        > * {
+          color: inherit;
+        }
       }
     }
   }
@@ -135,7 +138,6 @@
         }
 
         &-footer {
-          color: var(--pf-global--color--background--dark);
           font-size: var(--pf-global--FontSize--xs);
         }
       }
@@ -155,7 +157,6 @@
   }
 }
 
-
 .curiosity-chartarea {
   &__legend {
     background-color: var(--pf-global--BackgroundColor--100);
@@ -169,7 +170,11 @@
 
   &__tooltip {
     transition: width 1s ease-in-out, left 1s ease-in-out;
-    background-color: var(--pf-global--color--background--dark);
+    background-color: var(--pf-t--global--background--color--400);
+    border: 2px var(--pf-global--BorderColor--400) solid;
+    border-top: transparent;
+    border-bottom: transparent;
+    border-radius: .25rem;
     color: var(--pf-global--color--background--light);
     margin-left: 10px;
     margin-right: 15px;
@@ -186,7 +191,7 @@
     &-right:after {
       border-width: 10px;
       border-style: solid;
-      border-color: transparent var(--pf-global--color--background--dark) transparent transparent;
+      border-color: transparent var(--pf-global--BorderColor--400) transparent transparent;
       content: "";
       left: -9px;  //-10px Compensate for Firefox pixel diff, match margin-left
       margin-left: 0;
@@ -196,10 +201,15 @@
     }
 
     &-right:after {
-      border-color: transparent transparent transparent var(--pf-global--color--background--dark);
+      border-color: transparent transparent transparent var(--pf-global--BorderColor--400);
       left: calc(100% - 16px); //-15px Compensate for Firefox pixel diff, match margin-right
       margin-left: 0;
     }
+  }
+
+  [id^="curiosity-chartarea__x-axis"] > tspan,
+  [id^="curiosity-chartarea__y-axis"] > tspan {
+    fill: var(--pf-global--BorderColor--300) !important;
   }
 
   &__axis-label-container {
@@ -207,7 +217,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    color: var(--pf-global--color--background--dark);
+    color: var(--pf-global--BorderColor--300) !important;
     font-size: var(--pf-global--FontSize--xs);
 
     &-x {
@@ -240,6 +250,6 @@
 
   > div > svg > line[role="presentation"][vector-effect="non-scaling-stroke"] {
     position: relative;
-    stroke: var(--pf-global--color--background--dark) !important;
+    stroke: var(--pf-global--BorderColor--400) !important;
   }
 }
