--- a/src/styles/_table.scss
+++ b/src/styles/_table.scss
@@ -1,6 +1,6 @@
 .curiosity {
   .curiosity-table__td-expand {
-    padding: 0 !important;
+    padding-left: 0 !important;
   }
 
   .curiosity-table__td-expand-expanded.curiosity-table__td-expand-wrapper {
